spelling corrections + decrease size in slider task

--- a/s3Content/index.html
+++ b/s3Content/index.html
@@ -751,7 +751,7 @@
 
 
         <div class="ui segment">
-          Q1. According to you, which emotion is the model trying to potray in the picture?
+          Q1. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -795,7 +795,7 @@
         <br>
 
         <div class="ui segment">
-          Q2. According to you, which emotion is the model trying to potray in the picture?
+          Q2. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -839,7 +839,7 @@
         <br>
 
         <div class="ui segment">
-          Q3. According to you, which emotion is the model trying to potray in the picture?
+          Q3. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -883,7 +883,7 @@
         <br>
 
         <div class="ui segment">
-          Q4. According to you, which emotion is the model trying to potray in the picture?
+          Q4. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -927,7 +927,7 @@
         <br>
 
         <div class="ui segment">
-          Q5. According to you, which emotion is the model trying to potray in the picture?
+          Q5. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -971,7 +971,7 @@
         <br>
 
         <div class="ui segment">
-          Q6. According to you, which emotion is the model trying to potray in the picture?
+          Q6. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1015,7 +1015,7 @@
         <br>
 
         <div class="ui segment">
-          Q7. According to you, which emotion is the model trying to potray in the picture?
+          Q7. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1059,7 +1059,7 @@
         <br>
 
         <div class="ui segment">
-          Q8. According to you, which emotion is the model trying to potray in the picture?
+          Q8. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1103,7 +1103,7 @@
         <br>
 
         <div class="ui segment">
-          Q9. According to you, which emotion is the model trying to potray in the picture?
+          Q9. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1147,7 +1147,7 @@
         <br>
 
         <div class="ui segment">
-          Q10. According to you, which emotion is the model trying to potray in the picture?
+          Q10. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1191,7 +1191,7 @@
         <br>
 
         <div class="ui segment">
-          Q11. According to you, which emotion is the model trying to potray in the picture?
+          Q11. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1235,7 +1235,7 @@
         <br>
 
         <div class="ui segment">
-          Q12. According to you, which emotion is the model trying to potray in the picture?
+          Q12. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1279,7 +1279,7 @@
         <br>
 
         <div class="ui segment">
-          Q13. According to you, which emotion is the model trying to potray in the picture?
+          Q13. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1323,7 +1323,7 @@
         <br>
 
         <div class="ui segment">
-          Q14. According to you, which emotion is the model trying to potray in the picture?
+          Q14. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1367,7 +1367,7 @@
         <br>
 
         <div class="ui segment">
-          Q15. According to you, which emotion is the model trying to potray in the picture?
+          Q15. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1411,7 +1411,7 @@
         <br>
 
         <div class="ui segment">
-          Q16. According to you, which emotion is the model trying to potray in the picture?
+          Q16. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1455,7 +1455,7 @@
         <br>
 
         <div class="ui segment">
-          Q17. According to you, which emotion is the model trying to potray in the picture?
+          Q17. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1499,7 +1499,7 @@
         <br>
 
         <div class="ui segment">
-          Q18. According to you, which emotion is the model trying to potray in the picture?
+          Q18. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1543,7 +1543,7 @@
         <br>
 
         <div class="ui segment">
-          Q19. According to you, which emotion is the model trying to potray in the picture?
+          Q19. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1587,7 +1587,7 @@
         <br>
 
         <div class="ui segment">
-          Q20. According to you, which emotion is the model trying to potray in the picture?
+          Q20. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1641,7 +1641,7 @@
 
 
         <div class="ui segment">
-          Q1. According to you, which emotion is the model trying to potray in the picture?
+          Q1. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1685,7 +1685,7 @@
         <br>
 
         <div class="ui segment">
-          Q2. According to you, which emotion is the model trying to potray in the picture?
+          Q2. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1729,7 +1729,7 @@
         <br>
 
         <div class="ui segment">
-          Q3. According to you, which emotion is the model trying to potray in the picture?
+          Q3. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1773,7 +1773,7 @@
         <br>
 
         <div class="ui segment">
-          Q4. According to you, which emotion is the model trying to potray in the picture?
+          Q4. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1817,7 +1817,7 @@
         <br>
 
         <div class="ui segment">
-          Q5. According to you, which emotion is the model trying to potray in the picture?
+          Q5. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1861,7 +1861,7 @@
         <br>
 
         <div class="ui segment">
-          Q6. According to you, which emotion is the model trying to potray in the picture?
+          Q6. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1905,7 +1905,7 @@
         <br>
 
         <div class="ui segment">
-          Q7. According to you, which emotion is the model trying to potray in the picture?
+          Q7. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1949,7 +1949,7 @@
         <br>
 
         <div class="ui segment">
-          Q8. According to you, which emotion is the model trying to potray in the picture?
+          Q8. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -1993,7 +1993,7 @@
         <br>
 
         <div class="ui segment">
-          Q9. According to you, which emotion is the model trying to potray in the picture?
+          Q9. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2037,7 +2037,7 @@
         <br>
 
         <div class="ui segment">
-          Q10. According to you, which emotion is the model trying to potray in the picture?
+          Q10. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2081,7 +2081,7 @@
         <br>
 
         <div class="ui segment">
-          Q11. According to you, which emotion is the model trying to potray in the picture?
+          Q11. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2125,7 +2125,7 @@
         <br>
 
         <div class="ui segment">
-          Q12. According to you, which emotion is the model trying to potray in the picture?
+          Q12. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2169,7 +2169,7 @@
         <br>
 
         <div class="ui segment">
-          Q13. According to you, which emotion is the model trying to potray in the picture?
+          Q13. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2213,7 +2213,7 @@
         <br>
 
         <div class="ui segment">
-          Q14. According to you, which emotion is the model trying to potray in the picture?
+          Q14. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2257,7 +2257,7 @@
         <br>
 
         <div class="ui segment">
-          Q15. According to you, which emotion is the model trying to potray in the picture?
+          Q15. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2301,7 +2301,7 @@
         <br>
 
         <div class="ui segment">
-          Q16. According to you, which emotion is the model trying to potray in the picture?
+          Q16. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2345,7 +2345,7 @@
         <br>
 
         <div class="ui segment">
-          Q17. According to you, which emotion is the model trying to potray in the picture?
+          Q17. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2389,7 +2389,7 @@
         <br>
 
         <div class="ui segment">
-          Q18. According to you, which emotion is the model trying to potray in the picture?
+          Q18. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2433,7 +2433,7 @@
         <br>
 
         <div class="ui segment">
-          Q19. According to you, which emotion is the model trying to potray in the picture?
+          Q19. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2477,7 +2477,7 @@
         <br>
 
         <div class="ui segment">
-          Q20. According to you, which emotion is the model trying to potray in the picture?
+          Q20. According to you, which emotion is the model trying to portray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
@@ -2524,7 +2524,7 @@
         <br>
         <h4 class="ui large header">Task 4</h4>
 
-        <p> For this task you have to match the faces with the bodies. Scroll through the faces using the arrows or by swiping. Upon clicking on "Confirm Selection buttom, you choice will be locked, and a new Body image will be displayed. Continue selecting until all faces are matched to all the bodies.<p>
+        <p> Please read carefully. For this task you have to match a face portraying the same emotion as the body being shown. You can scroll through the faces using the arrows. Upon clicking on "Confirm Selection" buttom, your choice will be locked, and a new Body image will be displayed. You will continue selecting a matching face until all of them are matched to all the bodies.<p>
 
         <div class="ui segment" style= "padding-right: 5em; padding-left: 5em;">
             <div class="ui container center aligned">
@@ -2669,13 +2669,13 @@
     .body {
       position: relative;
       top: -50px;
-      width: 350px !important;
+      width: 320px !important;
     }
 
     /* handle on the face pics */
     .face {
       margin:auto;
-      width: 200px !important;
+      width: 180px !important;
     }
 
 
